# vehicle-plate-recognition

./: CMakeLists.txt  README.md  app.cpp  app.h  common.cpp  common.h  main.cpp  platedetector.cpp  platedetector.h  platerecognizer.cpp  platerecognizer.h
PlotDrawing/: CMakeLists.txt  mainwindow.ui  plotwindow.cpp  plotwindow.h  plotwindow.ui
data/: readme.txt
